@@ -37,58 +37,42 @@ namespace OpenVRML {
     class VrmlMatrix;
 
     class OPENVRML_SCOPE Viewer {
+    protected:
+        VrmlFrustum d_frust;
+
     public:
-        virtual ~Viewer() = 0;
-
-        // Options flags
         enum {
-          MASK_NONE	= 0,
-          MASK_CCW	= 1,
-          MASK_CONVEX	= 2,
-          MASK_SOLID	= 4,
-          MASK_BOTTOM = 8,
-          MASK_TOP	= 16,
-          MASK_SIDE	= 32,
-          MASK_COLOR_PER_VERTEX  = 64,
-          MASK_NORMAL_PER_VERTEX = 128
+            MASK_NONE                 = 0,
+            MASK_CCW                  = 1,
+            MASK_CONVEX               = 2,
+            MASK_SOLID                = 4,
+            MASK_BOTTOM               = 8,
+            MASK_TOP                  = 16,
+            MASK_SIDE                 = 32,
+            MASK_COLOR_PER_VERTEX     = 64,
+            MASK_NORMAL_PER_VERTEX    = 128
         };
-
-        // Object and texture keys. Don't mix them up.
-        typedef long Object;
-        typedef long TextureObject;
-
-        VrmlScene & getScene();
-
 
         enum RenderMode {
-          RENDER_MODE_DRAW,
-          RENDER_MODE_PICK
+            RENDER_MODE_DRAW,
+            RENDER_MODE_PICK
         };
 
-        // Return renderMode
+        typedef long Object;
+        typedef long TextureObject;
+        
+        VrmlScene & scene;
+
+        virtual ~Viewer() = 0;
+
         virtual RenderMode getRenderMode() = 0;
-
         virtual double getFrameRate() = 0;
-
-        /**
-         * Return view to last bound viewpoint.
-         */
         virtual void resetUserNavigation() = 0;
-
-        /**
-         * Return user's navigation from the last bound viewpoint as a
-         * VrmlMatrix-format matrix. The navigation transformation should be
-         * orthonormal.
-         *
-         * @param M returns navigation matrix in VrmlMatrix format
-         */
         virtual void getUserNavigation(VrmlMatrix & M) = 0;
 
-        // Open/close display lists
         virtual Object beginObject(const char *, bool = false) = 0;
         virtual void endObject() = 0;
 
-        // Insert objects into the display list
         virtual Object insertBackground(size_t nGroundAngles = 0,
 				        const float * groundAngle = 0,
 				        const float * groundColor = 0,
@@ -101,7 +85,6 @@ namespace OpenVRML {
         virtual Object insertBox(float, float, float ) = 0;
         virtual Object insertCone(float, float, bool, bool) = 0;
         virtual Object insertCylinder(float, float, bool, bool, bool) = 0;
-
         virtual Object insertElevationGrid(unsigned int mask,
 				           size_t nx,
 				           size_t nz,
@@ -111,7 +94,6 @@ namespace OpenVRML {
 				           const float * tc,
 				           const float * normals,
 				           const float * colors) = 0;
-
         virtual Object insertExtrusion(unsigned int,
 				       size_t nOrientation,
 				       const float * orientation,
@@ -121,16 +103,13 @@ namespace OpenVRML {
 				       const float * crossSection,
 				       size_t nSpine,
 				       const float * spine) = 0;
-
         virtual Object insertLineSet(size_t nCoords, const float * coord,
 			             size_t nCoordIndex, const long * coordIndex,
 			             bool colorPerVertex,
 			             const float * color,
 			             size_t nColorIndex,
 			             const long * colorIndex) = 0;
-
         virtual Object insertPointSet(size_t nv, const float * v, const float * c) = 0;
-
         virtual Object insertShell(unsigned int mask,
 			           size_t npoints, const float * points,
 			           size_t nfaces, const long * faces,
@@ -140,17 +119,11 @@ namespace OpenVRML {
 			           size_t nni, const long * ni,
 			           const float * color,
 			           size_t nci, const long * ci) = 0;
-
-        virtual Object insertSphere(float /*radius*/) = 0;
-
+        virtual Object insertSphere(float radius) = 0;
         virtual Object insertText(int*, float size, int n, char const * const *s) = 0;
-
-        // Lights
         virtual Object insertDirLight(float, float, const float [], const float []) = 0;
-
         virtual Object insertPointLight(float, const float [], const float [],
-				        float, const float [], float ) = 0;
-
+				        float, const float [], float) = 0;
         virtual Object insertSpotLight(float ambientIntensity,
 				       const float attenuation[],
 				       float beamWidth,
@@ -160,19 +133,15 @@ namespace OpenVRML {
 				       float intensity,
 				       const float location[],
 				       float radius) = 0;
+        virtual Object insertReference(Object existingObject) = 0;
 
-        // Lightweight copy
-        virtual Object insertReference(Object /*existingObject*/) = 0;
-
-        // Remove an object from the display list
         virtual void removeObject(Object) = 0;
 
         virtual void enableLighting(bool) = 0;
 
-        // Set attributes
-        virtual void setFog(const float * /*color*/,
-		            float   /*visibilityRange*/,
-		            const char * /*fogType*/) = 0;
+        virtual void setFog(const float * color,
+		            float visibilityRange,
+		            const char * fogType) = 0;
 
         virtual void setColor(float r, float g, float b, float a = 1.0) = 0;
 
@@ -187,16 +156,16 @@ namespace OpenVRML {
 
         virtual void setSensitive(Node * object) = 0;
 
-        virtual void scaleTexture(size_t /*w*/, size_t /*h*/,
-			          size_t /*newW*/, size_t /*newH*/,
-			          size_t /*nc*/,
-			          unsigned char* /*pixels*/) = 0;
+        virtual void scaleTexture(size_t w, size_t h,
+			          size_t newW, size_t newH,
+			          size_t nc,
+			          unsigned char * pixels) = 0;
 
         // Create a texture object
-        virtual TextureObject insertTexture(size_t /*w*/, size_t /*h*/, size_t /*nc*/,
-				            bool /*repeat_s*/,
-				            bool /*repeat_t*/,
-				            const unsigned char * /*pixels*/,
+        virtual TextureObject insertTexture(size_t w, size_t h, size_t nc,
+				            bool repeat_s,
+				            bool repeat_t,
+				            const unsigned char * pixels,
 				            bool retainHint = false) = 0;
 
         // Reference/remove a texture object
@@ -237,13 +206,7 @@ namespace OpenVRML {
         // The viewer knows the current viewpoint
         virtual void transformPoints(int nPoints, float *points) = 0;
 
-      /**
-       * Multiply current ModelView Matrix with Given Matrix M
-       *
-       * @param M matrix in VrmlMatrix format (Same as OGL)
-       */
-      // 
-      virtual void MatrixMultiply(const float M[4][4]) = 0;
+        virtual void MatrixMultiply(const float M[4][4]) = 0;
 
         // still working on some navigation api issues, so don't depend on
         // thses yet. there's a default implementation in any case, so you
@@ -257,10 +220,6 @@ namespace OpenVRML {
         virtual void drawBSphere(const BSphere & bs, int flag) = 0;
 
     protected:
-        VrmlScene & scene;
-        VrmlFrustum d_frust;
-
-        Viewer(VrmlScene & scene);
         static void computeCylinder(double height, double radius, int numFacets,
 		                    float c[][3], float tc[][3], int faces[]);
 
@@ -277,6 +236,8 @@ namespace OpenVRML {
 
         static void computeView(const float position[3], float orientation[3],
                                 float distance, float target[3], float up[3]);
+        
+        explicit Viewer(VrmlScene & scene);
 
     private:
         // non-copyable
