@@ -1,3 +1,9 @@
+2002-06-08  Braden McDaniel  <braden@endoframe.com>
+
+        * Some Doxygen love for Viewer.
+
+        * Made Viewer::scene public and eliminated accessor method.
+
 2002-06-07  Braden McDaniel  <braden@endoframe.com>
 
         * Doxygen love and minor cruft removal for Doc and Doc2.
